--- a/UI/html/login.html
+++ b/UI/html/login.html
@@ -36,12 +36,12 @@
                     <h1>Вход</h1>
                     <div class="input-box">
                         <input type="text" placeholder="Логин" required>
-                        <img src="../img/icons/user.svg" alt="login-image">
+                        <img src="../img/icons/login-page/user.svg" alt="login-image">
                     </div>
 
                     <div class="input-box">
                         <input type="password" placeholder="Пароль" required>
-                        <img src="../img/icons/lock.svg" alt="login-image">
+                        <img src="../img/icons/login-page/lock.svg" alt="login-image">
                     </div>
 
                     <div class="remember">
@@ -67,10 +67,10 @@
             <div class="footer__wrapper">
                 <ul class="social">
                     <li class="social__item">
-                        <a href="#!"><img src="../img/icons/vk.svg" alt="link"></a>
+                        <a href="#!"><img src="../img/icons/socials/vk.svg" alt="link"></a>
                     </li>
                     <li class="social__item">
-                        <a href="#!"><img src="../img/icons/gitHub.svg" alt="link"></a>
+                        <a href="#!"><img src="../img/icons/socials/gitHub.svg" alt="link"></a>
                     </li>
                 </ul>
                 <div class="copyright">
