--- a/UI/html/login.html
+++ b/UI/html/login.html
@@ -29,19 +29,20 @@
 
     <div class="login">
         <div class="container">
-
             <div class="wrapper-login">
 
-                <form action="">
+                <form id="login-form" action="">
                     <h1>Вход</h1>
                     <div class="input-box">
-                        <input type="text" placeholder="Логин" required>
+                        <input type="text" id="login-username" placeholder="Логин" required>
                         <img src="../img/icons/user.svg" alt="login-image">
+                        <div class="error"></div>
                     </div>
 
                     <div class="input-box">
-                        <input type="password" placeholder="Пароль" required>
+                        <input type="password" id="login-password" placeholder="Пароль" required>
                         <img src="../img/icons/lock.svg" alt="login-image">
+                        <div class="error"></div>
                     </div>
 
                     <div class="remember">
@@ -54,10 +55,8 @@
                     <div class="register-link">
                         <p>Нет аккаунта? <a class="nav-list__link" href="registration.html">Регистрация</a></p>
                     </div>
-                    
                 </form>
             </div>
-
         </div>
     </div>
 
@@ -79,6 +78,9 @@
             </div>
         </div>
     </footer>
+
+    <script defer src="../js/formLoginValidation.js"></script>
+
 </body>
 </html> 
 
