Added page about authors

--- a/UI/html/login.html
+++ b/UI/html/login.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Classify</title>
     <link rel="stylesheet" href="../css/main.css">
-    <link rel="shortcut icon" href="../img/Logo_BNTU.png"/>
+    <link rel="shortcut icon" href="../img/png/Logo_BNTU.png"/>
     
 </head>
 
